What happens if we take some common words out?
Of course this would happen, be more selective, idiot

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2275,10 +2275,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7509607993850884\n",
-      "Precision: [0.87760098 0.53719008]\n",
-      "Recall: [0.76195537 0.72222222]\n",
-      "F-score: [0.81569966 0.61611374]\n"
+      "Accuracy: 0.722521137586472\n",
+      "Precision: [0.87856258 0.46761134]\n",
+      "Recall: [0.72942387 0.70212766]\n",
+      "F-score: [0.79707701 0.56136087]\n"
      ]
     }
    ],
@@ -2311,10 +2311,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7363566487317448\n",
-      "Precision: [0.86780906 0.51446281]\n",
-      "Recall: [0.75105932 0.69747899]\n",
-      "F-score: [0.8052243 0.5921522]\n"
+      "Accuracy: 0.717140661029977\n",
+      "Precision: [0.87980173 0.451417  ]\n",
+      "Recall: [0.72375127 0.696875  ]\n",
+      "F-score: [0.79418345 0.54791155]\n"
      ]
     }
    ],
@@ -2342,10 +2342,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7317448116833205\n",
-      "Precision: [0.86780906 0.50206612]\n",
-      "Recall: [0.74631579 0.69230769]\n",
-      "F-score: [0.8024901  0.58203593]\n"
+      "Accuracy: 0.7148347425057648\n",
+      "Precision: [0.88351921 0.43927126]\n",
+      "Recall: [0.72020202 0.6977492 ]\n",
+      "F-score: [0.7935448  0.53913043]\n"
      ]
     }
    ],
@@ -2396,17 +2396,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's just try regression, see what happens"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 0.3693436921913265\n",
-      "Mean squared error: 0.2148132708699824\n",
-      "Explained variance score: 0.09732974987565413\n"
+      "Mean absolute error: 0.3786473931105807\n",
+      "Mean squared error: 0.22122880636527625\n",
+      "Explained variance score: 0.06677530828863387\n"
      ]
     }
    ],
@@ -2434,9 +2441,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 0.3779112560117895\n",
-      "Mean squared error: 0.21669653092383503\n",
-      "Explained variance score: 0.09117783799494494\n"
+      "Mean absolute error: 0.38716031282211893\n",
+      "Mean squared error: 0.22312461824391103\n",
+      "Explained variance score: 0.05985840347390159\n"
      ]
     }
    ],
@@ -2464,9 +2471,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 0.38167792821195395\n",
-      "Mean squared error: 0.21847331529970632\n",
-      "Explained variance score: 0.08406245484697283\n"
+      "Mean absolute error: 0.3905880901891673\n",
+      "Mean squared error: 0.2245537015038456\n",
+      "Explained variance score: 0.05406320279063004\n"
      ]
     }
    ],
@@ -2483,6 +2490,205 @@
     "print('Mean absolute error:', metrics.mean_absolute_error(y_test, res))\n",
     "print('Mean squared error:', metrics.mean_squared_error(y_test, res))\n",
     "print('Explained variance score:', metrics.explained_variance_score(y_test, res))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try to fine-tune the algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'s             7906\n",
+      "n't            4613\n",
+      "one            4292\n",
+      "say            3370\n",
+      "like           2874\n",
+      "time           2558\n",
+      "get            2344\n",
+      "would          2305\n",
+      "could          2092\n",
+      "make           2053\n",
+      "back           1977\n",
+      "said           1968\n",
+      "use            1888\n",
+      "go             1864\n",
+      "know           1853\n",
+      "station        1819\n",
+      "look           1772\n",
+      "peopl          1534\n",
+      "see            1522\n",
+      "even           1502\n",
+      "start          1452\n",
+      "take           1424\n",
+      "thing          1404\n",
+      "head           1394\n",
+      "man            1388\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_ndel = word_tokenize(' '.join(df[df[\"deleted\"] == 0][\"processed\"]))\n",
+    "list_del = word_tokenize(' '.join(df[df[\"deleted\"] == 1][\"processed\"]))\n",
+    "\n",
+    "intersection = [w for w in list_ndel if w in list_del]\n",
+    "\n",
+    "freq_dist = FreqDist(intersection)\n",
+    "for word, frequency in freq_dist.most_common(25):\n",
+    "    print(\"{w:<15}{f}\".format(w=word, f=frequency))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00100000       293\n",
+      "hirou          136\n",
+      "01100101       126\n",
+      "leftist        126\n",
+      "tao            118\n",
+      "frankerz       113\n",
+      "ironse         108\n",
+      "01101111       101\n",
+      "zane           100\n",
+      "tylor          98\n",
+      "/2             96\n",
+      "/align         96\n",
+      "align=cent     94\n",
+      "01100001       93\n",
+      "aethria        88\n",
+      "curvata        88\n",
+      "celestia       86\n",
+      "01101110       86\n",
+      "01100100       86\n",
+      "gyro           84\n",
+      "dolf           83\n",
+      "01110100       83\n",
+      "e/0.75         81\n",
+      "01110011       77\n",
+      "01101000       75\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_ndel = [w for w in list_ndel if w not in intersection]\n",
+    "\n",
+    "freq_dist = FreqDist(list_ndel)\n",
+    "for word, frequency in freq_dist.most_common(25):\n",
+    "    print(\"{w:<15}{f}\".format(w=word, f=frequency))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "happyb         169\n",
+      "crab.tim       163\n",
+      "stillwel       161\n",
+      "mossfield      126\n",
+      "yulic          109\n",
+      "abook          107\n",
+      "minko          105\n",
+      "lampertin      92\n",
+      "8253           91\n",
+      "08:01:35       91\n",
+      "mcdonohugh     91\n",
+      "yul            86\n",
+      "lepid          86\n",
+      "nako           78\n",
+      "jale           73\n",
+      "memesmemesmemesmemesmemesmemesmemesmemesmemesmemesmem68\n",
+      "luci           62\n",
+      "hir            60\n",
+      "moltr          57\n",
+      "ritz           57\n",
+      "quisti         51\n",
+      "amanda         45\n",
+      "belleros       44\n",
+      "kzin           43\n",
+      "keith          41\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_del =  [w for w in list_del if w not in intersection]\n",
+    "\n",
+    "freq_dist = FreqDist(list_del)\n",
+    "for word, frequency in freq_dist.most_common(25):\n",
+    "    print(\"{w:<15}{f}\".format(w=word, f=frequency))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prune_intersected(words):\n",
+    "    tok = word_tokenize(words)\n",
+    "    tok = [w for w in tok if w not in intersection]\n",
+    "    return ' '.join(tok)\n",
+    "\n",
+    "df[\"processed_intersection\"] = df[\"content\"].apply(prune_intersected)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1,1), lowercase=True) \n",
+    "inp = vectorizer.fit_transform(df[\"processed\"])\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(inp, df[out], test_size=0.25, random_state=0xdeadbeef)\n",
+    "\n",
+    "svc = SVC()\n",
+    "svc.fit(x_train, y_train)\n",
+    "res = svc.predict(x_test)\n",
+    "print('Accuracy:', metrics.accuracy_score(res, y_test))\n",
+    "print('Precision:', metrics.precision_score(res, y_test, average=None))\n",
+    "print('Recall:', metrics.recall_score(res, y_test, average=None))\n",
+    "print('F-score:', metrics.f1_score(res, y_test, average=None))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I think it's apparent the model is too closely fitted, so we need to think of a different strategy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, it's an assumption. For now. I'll run it later, it takes a long time, okay?"
    ]
   }
  ],
